# hackthorn

./: GRIEVANCE_API.md  README.md  a.txt  package-lock.json  package.json
backend/: Cargo.toml
backend/migrations/: 20260213192811_create_users_and_auth_tables.sql  20260214000000_create_grievances_tables.sql  20260214193222_third_pillar.sql  20260214200733_fourth_pillar.sql
backend/src/: .env  academic.rs  admin.rs  auth.rs  cloudinary.rs  error.rs  grievances.rs  main.rs  opportunity.rs  partitioned_cookies.rs  structs.rs  telemetry.rs
frontend/: package-lock.json  package.json  railway.toml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: api.ts  auth.ts  types.ts
frontend/src/lib/components/: AcademicStatsCard.svelte  AcademicSubNav.svelte  BurgerMenu.svelte  Card.svelte  CourseCard.svelte  DevRoleSwitcher.svelte  Logo.svelte  PDA.svelte  PostCard.svelte
frontend/src/lib/components/icons/: ComputerSVG.svelte  CrossSVG.svelte  DeleteSVG.svelte  DownloadSVG.svelte  DropdownSVG.svelte  EditSVG.svelte  FilterSVG.svelte  GithubSVG.svelte  LeafSVG.svelte  LoginSVG.svelte  LogoutSVG.svelte  MailSVG.svelte  MembersSVG.svelte  NullSVG.svelte  PasskeySVG.svelte  PhoneSVG.svelte  PinSVG.svelte  PlusSVG.svelte  PostgresSVG.svelte  RustSVG.svelte  SearchSVG.svelte  SquirrelSVG.svelte  SvelteSVG.svelte  TodoSVG.svelte  (+3 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/auth-error/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/grievances/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/privacy/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/terms/: +page.svelte
(+20 files in other folders)
