[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lints.rust]
dead_code = "allow"

[dependencies]
axum = { version = "0.8", features = ["form", "multipart"] }
http = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
pulldown-cmark = "0.13.0"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-sessions = "0.14"
tower-sessions-memory-store = "0.14"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
sha1 = "0.10"
urlencoding = "2.1"
